--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">appCrossPlatform</string>
+    <string name="google_maps_api_key">AIzaSyDgd6CgKYjhrwdwIumOrNEEV92mRO0DXkI</string>
 </resources>
